fix z-index for open-slide icon set to 2

--- a/style.css
+++ b/style.css
@@ -195,6 +195,7 @@ ul li:hover {
 
     .open-slide {
         visibility: visible;
+        z-index: 2;
     }
 
 /* parallax - do skasowania */
